test/sema/struct_redeclared_with_function.dmz
// RUN: dmz %s -res-dump 2>&1 | filecheck %s
fn S() -> void {
// CHECK: [[# @LINE - 1 ]]:1: error: redeclaration of 'S'
}

struct S {
  x: i32,
}

fn main() -> void {
}
